--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.11.34",
+    "@types/p5": "^1.4.2",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "p5": "^1.4.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
