--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
+    "@types/md5": "^2.3.2",
     "@types/node": "^16.11.34",
     "@types/p5": "^1.4.2",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "md5": "^2.3.0",
     "p5": "^1.4.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
