--- a/.github/workflows/add-issue-to-project.yml
+++ b/.github/workflows/add-issue-to-project.yml
@@ -17,3 +17,4 @@ jobs:
       uses: srggrs/assign-one-project-github-action@1.2.1
       with:
         project: 'https://github.com/users/bioerrorlog/projects/1'
+        column_name: 'Todo'
